# ellipse-detection-backend

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_docker.sh
conf/: ellipse_detection_flag.conf
proto/: ellipse_detect.proto
scripts/: compile.sh  start_server.sh  test.py
src/: ellipse_detect_service_impl.cpp  ellipse_detect_service_impl.h  server.cpp
src/common/: utils.hpp
